# coding-partner

./: Cargo.toml  GEMINI.md  README.md
agent/: Cargo.toml
console/: Cargo.toml  notes.md
console/src/: common.rs  input.rs  lib.rs  stdio.rs  terminal.rs
console/tests/: stdio.rs  terminal.rs
partner/: Cargo.toml
research/: Agentic Software Development Assistants Comparison.md  Building ReAct LLM Agents.md  Building a Rust AI Coding Assistant.md  Gemini CLI Architecture for Developers.md  RAG Code Navigation and Indexing.md  Rust ReAct LLM Frameworks Overview.md
