[package]
name = "agent"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rig-core = "0.18.2"
rig-dyn = { version = "0.3", features = ["serde"] }
rig-tool-macro = "0.5.0"
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
