[package]
name = "console"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.80"
thiserror = "1.0.61"
shlex = "1.3.0"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
